// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VPagination render should be with default state 1`] = `
<div class="v-pagination">
  <div class="v-pagination-navigation"><span class="v-pagination-node">Page 1</span> <a disabled="disabled" data-test="pagination-prev" class="v-pagination-node"><span class="v-pagination-triangle-left"></span></a>
    <!---->
    <!---->
    <!---->
    <!----> <a data-test="pagination-next" class="v-pagination-node"><span class="v-pagination-triangle-right"></span></a></div>
</div>
`;

exports[`VPagination render should be with defined total 1`] = `
<div class="v-pagination">
  <div class="v-pagination-navigation"><span class="v-pagination-node">Page 6</span> <a data-test="pagination-prev" class="v-pagination-node"><span class="v-pagination-triangle-left"></span></a> <a data-test="btn-goto-first" class="v-pagination-node">
      1
    </a> <a data-test="dots-left" class="v-pagination-node">...</a> <a data-test="btn-goto-page" class="v-pagination-node">
      5
      <span class=""></span></a><a data-test="btn-goto-page" class="v-pagination-node">
      6
      <span class="v-pagination-active-foot"></span></a><a data-test="btn-goto-page" class="v-pagination-node">
      7
      <span class=""></span></a> <a data-test="dots-right" class="v-pagination-node">...</a> <a data-test="btn-goto-last" class="v-pagination-node">
      10
    </a> <a data-test="pagination-next" class="v-pagination-node"><span class="v-pagination-triangle-right"></span></a></div>
</div>
`;

exports[`VPagination render should be with defined total in end 1`] = `
<div class="v-pagination">
  <div class="v-pagination-navigation"><span class="v-pagination-node">Page 11</span> <a data-test="pagination-prev" class="v-pagination-node"><span class="v-pagination-triangle-left"></span></a> <a data-test="btn-goto-first" class="v-pagination-node">
      1
    </a> <a data-test="dots-left" class="v-pagination-node">...</a> <a data-test="btn-goto-page" class="v-pagination-node">
      8
      <span class=""></span></a><a data-test="btn-goto-page" class="v-pagination-node">
      9
      <span class=""></span></a><a data-test="btn-goto-page" class="v-pagination-node">
      10
      <span class=""></span></a>
    <!---->
    <!----> <a data-test="pagination-next" class="v-pagination-node" disabled="disabled"><span class="v-pagination-triangle-right"></span></a></div>
</div>
`;

exports[`VPagination render should be with pagesVisible 1`] = `
<div class="v-pagination">
  <div class="v-pagination-navigation"><span class="v-pagination-node">Page 5</span> <a data-test="pagination-prev" class="v-pagination-node"><span class="v-pagination-triangle-left"></span></a> <a data-test="btn-goto-first" class="v-pagination-node">
      1
    </a> <a data-test="dots-left" class="v-pagination-node">...</a> <a data-test="btn-goto-page" class="v-pagination-node">
      4
      <span class=""></span></a><a data-test="btn-goto-page" class="v-pagination-node">
      5
      <span class="v-pagination-active-foot"></span></a><a data-test="btn-goto-page" class="v-pagination-node">
      6
      <span class=""></span></a> <a data-test="dots-right" class="v-pagination-node">...</a>
    <!----> <a data-test="pagination-next" class="v-pagination-node"><span class="v-pagination-triangle-right"></span></a></div>
</div>
`;
